--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -35,7 +35,7 @@ color14 #88c0d0
 color7  #D8DEE9
 color15 #D8DEE9
 #ffb52a  #6c6c6c
-active_tab_background #ffb52a
+active_tab_background #262626
 #active_tab_foreground   #ffb52a
 active_tab_foreground #ffb52a
 #active_tab_background   #7CA1D0
