--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,11 +20,12 @@ bind -n C-PgDn select-window -t :+
 
 # open new window gnome-terminal style
 bind -n C-T new-window
+bind -n C-S new-session
 set-window-option -g xterm-keys on
 
 # move windows forward and backwards, gnome-terminal style
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-tab swap-window -t -1
+bind-key -n C-S-l swap-window -t +1
 
 # use the mouse
 # set-window-option -g mode-mouse on
