--- a/Codium/User/settings.json
+++ b/Codium/User/settings.json
@@ -4,8 +4,10 @@
   "telemetry.enableTelemetry": false,
   "vscode-neovim.neovimExecutablePaths.darwin": "/usr/local/bin/nvim",
   "vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
+  "vscode-neovim.neovimExecutablePaths.win32": "C:\neovim\bin\nvim.exe",
   "vscode-neovim.neovimInitVimPaths.darwin": "$HOME/.config/nvim/vimscript/nvim-vscodium/init.vim",
   "vscode-neovim.neovimInitVimPaths.linux": "$HOME/.config/nvim-vscodium/init.vim",
+  "vscode-neovim.neovimInitVimPaths.win32": "$HOME/.config/nvim-vscodium/init.vim",
   "editor.scrollbar.horizontal": "hidden",
   "editor.scrollbar.vertical": "hidden",
   "workbench.list.automaticKeyboardNavigation": false,
@@ -1108,7 +1110,7 @@
   "window.menuBarVisibility": "toggle",
   "workbench.editorAssociations": {
     "*.html": "default",
-    "*.pdf": "default"
+    "*.pdf": "pdf.preview"
   },
   "java.home": "/usr/lib/jvm/java",
   "java.configuration.runtimes": [
@@ -1124,6 +1126,11 @@
   "editor.cursorBlinking": "solid",
   "git.autofetch": true,
   "explorer.confirmDragAndDrop": false,
+  "git.confirmSync": false,
+  "oracledevtools.bookmarkFileFolder": "/home/fra/Oracle/oracle.oracledevtools",
+  "oracledevtools.download.otherFolder": "/home/fra/downloads",
+  "oracledevtools.connectionConfiguration.configFilesFolder": "/home/fra/Oracle/network/admin",
+  "oracledevtools.connectionConfiguration.walletFileFolder": "/home/fra/Oracle/network/admin",
   "workbench.activityBar.visible": false,
   "window.zoomLevel": -1
 
