--- a/i3/config
+++ b/i3/config
@@ -84,7 +84,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+ò split o #THERES AN ERRORRR!!!!!!!
+#bindsym $mod+ò split o #THERES AN ERRORRR!!!!!!!
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -286,11 +286,11 @@ for_window [class="chromium-browser"] floating enable
 hide_edge_borders vertical
 
 set $i3lockwall i3lock -i ~/Immagini/bb.png
-exec_always ~/.local/bin/scripts/battery
+#exec_always ~/.local/bin/scripts/battery
 
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-bindsym $mod+d --release exec sleep 0 && rofi -show drun ~/.config/rofi/t.rasi -theme s
-bindsym $mod+Shift+p exec ~/.local/bin/scripts/poffrofi
+#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+#bindsym $mod+d --release exec sleep 0 && rofi -show drun ~/.config/rofi/t.rasi -theme s
+#bindsym $mod+Shift+p exec ~/.local/bin/scripts/poffrofi
 
 ## startup
 
@@ -305,3 +305,34 @@ bindsym $mod+Shift+p exec ~/.local/bin/scripts/poffrofi
 
 #assign [class="kitty"] 2
 #assign [class="Telegram"] 3
+
+bindsym XF86AudioRaiseVolume exec --no-startup-id qdbus org.kde.kglobalaccel /component/kmix invokeShortcut "increase_volume"
+bindsym XF86AudioLowerVolume exec --no-startup-id qdbus org.kde.kglobalaccel /component/kmix invokeShortcut "decrease_volume"
+bindsym XF86AudioMute exec --no-startup-id qdbus org.kde.kglobalaccel /component/kmix invokeShortcut "mute"
+bindsym XF86AudioMicMute exec --no-startup-id qdbus org.kde.kglobalaccel /component/kmix invokeShortcut "mic_mute"
+
+# Kill the wallpaper window set by Plasma*
+for_window [title="Desktop — Plasma"] kill; floating enable; border none
+
+# Set Plasma dialogs and pop ups as floating so they won't get tiled
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
+for_window [class="systemsettings"] floating enable
+for_window [class="plasmashell"] floating enable;
+for_window [class="Plasma"] floating enable; border none
+for_window [title="plasma-desktop"] floating enable; border none
+for_window [class="krunner"] floating enable; border none
+for_window [class="Kmix"] floating enable; border none
+for_window [class="Klipper"] floating enable; border none
+for_window [class="Plasmoidviewer"] floating enable; border none
+for_window [class="plasmashell" window_type="notification"] border none, move right 700px, move down 450px
+no_focus [class="plasmashell" window_type="notification"
+
+# Set other stuff as floating
+for_window [class="(?i)*nextcloud*"] floating disable
+
+# Set the desktop background
+exec --no-startup-id feh --bg-scale <PATH_TO_YOUR_WALLPAPER>
+
+# Start the compositor daemonizing it (-b) and enabling shadows (-c)
+exec_always --no-startup-id picom -cb
