--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -85,7 +85,8 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label pager  = lvim -- "$@"
+# mime ^text,  label pager  = lvim -- "$@"
+mime ^text,  label pager  = lvim
 mime ^text,  label pager  = nvim -- "$@"
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = vim -- "$@"
@@ -95,12 +96,14 @@ mime ^text,  label pager  = code -- "$@"
 mime ^text,  label pager  = vim
 mime ^text,  label pager  = vim
 mime ^text,  label editor  = vim
+mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = lvim
+# mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = lvim-- "$@"
 !mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = lvim-- "$@"
-!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim-- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
-!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = vim-- "$@"
-!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim-- "$@"
-!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
+# !mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim-- "$@"
+# !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+# !mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = vim-- "$@"
+# !mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nvim-- "$@"
+# !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
 ext s[wmf]c, has zsnes, X     = zsnes "$1"
