--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,9 +16,10 @@ tab_separator " | "
 #tab_separator " █ "
 
 # background #1f2227
+# background #ededed
 background #262626
 font_size 10.0
-color0  #4C566A
+# color0  #4C566A
 color8  #4C566A
 color1  #bf616a
 color9  #bf616a
